--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,13 @@ set(CMAKE_C_STANDARD 11)
 add_executable(sae_s21
         main.c
         src/adresse.c
-        src/adresse.c
         src/reseau.c
+        src/algos.c
+        src/graphe.c
+        src/station.c
+        src/switch.c
         src/config.c
+        src/utils.c
+        include/utils.h
 )
 
