--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,7 @@ add_executable(sae_s21
         src/switch.c
         src/config.c
         src/utils.c
-        src/trame.c
-        include/trame.h
-        src/stp.c
-        include/stp.h
+        src/tram.c
+        include/tram.h
 )
 
